--- a/web_wms_la/package.json
+++ b/web_wms_la/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "~6.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "antd": "^6.1.2",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
