--- a/web_wms_la/package.json
+++ b/web_wms_la/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
