--- a/be_wms_la/BE_WMS_LA.Core/BE_WMS_LA.Core.csproj
+++ b/be_wms_la/BE_WMS_LA.Core/BE_WMS_LA.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Minio" Version="6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
