--- a/be_wms_la/BE_WMS_LA.Shared/BE_WMS_LA.Shared.csproj
+++ b/be_wms_la/BE_WMS_LA.Shared/BE_WMS_LA.Shared.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Minio.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.11.10" />
     <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
