feat: Add BrandName field and Excel Import/Export with MiniExcel

--- a/be_wms_la/BE_WMS_LA.Core/BE_WMS_LA.Core.csproj
+++ b/be_wms_la/BE_WMS_LA.Core/BE_WMS_LA.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MiniExcel" Version="1.42.0" />
     <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
